--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
+
+<head>
+  <%- include('partials/head.ejs') %>
+</head>
+
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
