set default back to ultra

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
-<% var defaults={ content_file:'default-ultra.ejs' , title:'ULTRA Classic' , style:'red-alert',
-	body:'body-red-alert.ejs' } %>
+<% var defaults={ content_file:'default-ultra.ejs' , title:'ULTRA Classic' , style:'ultra',
+	body:'body-ultra.ejs' } %>
 	<!DOCTYPE html>
 	<html>
 
