Moved SCascade to own files. SonarLint cleanup

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% var defaults={ content_file:'default-ultra.ejs' , title:'ULTRA Classic' , style:'ultra',
 	body:'body-ultra.ejs' } %>
 	<!DOCTYPE html>
-	<html>
+	<html lang="">
 
 	<head>
 		<%- include('partials/head.ejs',{title:defaults.title, style: defaults.style}) %>
