--- a/views/partials/column-1.ejs
+++ b/views/partials/column-1.ejs
@@ -6,7 +6,22 @@
     </div>
     <div class="frame-col-2"> </div>
     <div class="frame-col-3 display-vertical">
-        <div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
     </div>
     <div class="frame-col-4"> </div>
     <div class="frame-col-5">
@@ -24,14 +39,16 @@
     <div class="pill"><a href="">A-006</a></div>
 </div>
 <div class="lcars-list-2 uppercase">
-    <%- include('list-items.ejs',{
-        items: [
-            {text:'Subspace Link: Established'},
-            {text:'Starfleet Database: Connected'},
-            {text:'Quantum Memory Field: stable'},						
-            {text:'Optical Data Network: rerouting', class:'oc-almond-creme go-almond-creme'}
-        ]
-    }) %>
+    <%- include('list-items.ejs'
+            ,{ 
+                items: [ 
+                      {text:'Subspace Link: Established'}
+                    , {text:'Starfleet Database: Connected'}
+                    , {text:'Quantum Memory Field: stable'}
+                    , {text:'Optical Data Network: rerouting', class:'oc-almond-creme go-almond-creme'} 
+                    ] 
+            }) 
+    %>
 </div>
 <div class="pillbox">
     <div class="pill-2"><a href="">F12-22</a></div>
